--- a/MainApp/Templates/add.html
+++ b/MainApp/Templates/add.html
@@ -9,7 +9,7 @@
     <form action="" method="post">
 
         {% csrf_token %}
-
+        
         <div class="form-group">
             <label for="">ID</label>
             <input type="text" name="inputId" class="form-control">
@@ -21,8 +21,38 @@
         </div>
 
         <div class="form-group">
-            <label for="">Contact Number</label>
-            <input type="text" name="inputContactNumber" class="form-control">
+            <label for="">Department</label>
+            <input type="text" name="inputDepartment" class="form-control">
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Employment Status</label>
+            <input type="text" name="inputEmploymentStatus" class="form-control">
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Expertise/Subject</label>
+            <input type="text" name="inputExpertiseSubject" class="form-control">
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Day Availability</label>
+            <input type="text" name="inputDayAvailability" class="form-control">
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Time Preference</label>
+            <input type="text" name="inputTimePreference" class="form-control">
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Units/Load</label>
+            <input type="text" name="inputUnitsLoad" class="form-control">
             <br>
         </div>
 
