--- a/MainApp/Templates/base.html
+++ b/MainApp/Templates/base.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Faculty Member: Input</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('.chkvalues').click(function() {
+          var txt="";
+          $('.chkvalues:checked').each(function(){
+            txt += $(this).val()+", "
+          });
+          txt = txt.substring(0, txt.length - 2);
+          $('#txtvalues').val(txt);
+        });
+      });
+    </script>
 
   </head>
 
