--- a/MainApp/Templates/add.html
+++ b/MainApp/Templates/add.html
@@ -11,19 +11,39 @@
         {% csrf_token %}
         
         <div class="form-group">
-            <label for="">ID</label>
+            <label for="">ID:</label>
             <input type="text" name="inputId" class="form-control">
             <br>
         </div>
 
         <div class="form-group">
-            <label for="">Name</label>
+            <label for="">Name:</label>
             <input type="text" name="inputName" class="form-control">
             <br>
         </div>
-       
+
         <div class="form-group">
-            <label for="">Department</label>
+            <label for="">Employment Status:</label>
+            <select name="inputEmploymentStatus" class="form-control">
+                <option selected disabled="true">-----Select Employment Status-----</option>
+                <option>Part-time</option>
+                <option>Full-time</option>
+            </select>
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">College:</label>
+            <select name="inputCollege" class="form-control">
+                <option selected disabled="true">-----Select College-----</option>
+                <option>College of Engineering and Technology</option>
+                <option>PLM Business School</option>
+            </select>
+            <br>
+        </div>
+
+        <div class="form-group">
+            <label for="">Department:</label>
             <select name="inputDepartment" class="form-control">
                 <option selected disabled="true">-----Select Department-----</option>
                 <option>Computer Science</option>
@@ -34,17 +54,7 @@
         </div>
 
         <div class="form-group">
-            <label for="">Employment Status</label>
-            <select name="inputEmploymentStatus" class="form-control">
-                <option selected disabled="true">-----Select Employment Status-----</option>
-                <option>Part-time</option>
-                <option>Full-time</option>
-            </select>
-            <br>
-        </div>
-
-        <div class="form-group">
-            <label for="">Expertise/Subject</label>
+            <label for="">Expertise/Subject:</label>
             <hr>
             <input type="checkbox" value="Software Engineering" class="chkvalues"/>Software Engineering
             <input type="checkbox" value="Programming" class="chkvalues"/>Programming
@@ -56,19 +66,19 @@
         </div>
 
         <div class="form-group">
-            <label for="">Day Availability</label>
+            <label for="">Day Availability:</label>
             <input type="text" name="inputDayAvailability" class="form-control">
             <br>
         </div>
 
         <div class="form-group">
-            <label for="">Time Preference</label>
+            <label for="">Time Preference:</label>
             <input type="text" name="inputTimePreference" class="form-control">
             <br>
         </div>
 
         <div class="form-group">
-            <label for="">Units/Load</label>
+            <label for="">Units/Load:</label>
             <input type="text" name="inputUnitsLoad" class="form-control">
             <br>
         </div>
