modified:   MainApp/Templates/add.html

--- a/MainApp/Templates/add.html
+++ b/MainApp/Templates/add.html
@@ -46,7 +46,7 @@
             <label for="">Department:</label>
             <select name="inputDepartment" class="form-control">
                 <option selected disabled="true">-----Select Department-----</option>
-                <option>Computer Science</option>
+                <option>Compute Science</option>
                 <option>Computer Engineering</option>
                 <option>Information Technology</option>
             </select>
