--- a/MainApp/Customs/home.css
+++ b/MainApp/Customs/home.css
@@ -1,28 +1,41 @@
 /* custom styling for home page */
-
 body {
-    background-image: url("https://ptvnews.ph/wp-content/uploads/2022/06/PLM1-scaled.jpg");
-    background-size: cover;
-    background-repeat: no-repeat, repeat;
-    background-attachment: fixed;
-    background-position: center;
+    padding-bottom: 40px;
+    position: relative;
     display: flex;
     justify-content: center;
     height: 100%;
-    padding-top: 2px;
+}
+
+body::before {
+    background: url("https://ptvnews.ph/wp-content/uploads/2022/06/PLM1-scaled.jpg") no-repeat fixed center;
+    background-size: cover;
+    content: '';
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);
+}
+
+.pop-up,
+.gradient-form {
+    min-width: 350px;
+    width: 85%;
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 .pop-up {
-    height: max-content;
-    min-width: 350px;
-    width: 90%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-}
-
-.popup-div {
-    width: 50%;
+    box-shadow: 1px 15px 60px #322C;
     position: relative;
 }
 
@@ -42,13 +55,22 @@ body {
     align-items: center;
 }
 
-#info-section {background-color: #DDD;}
+#info-section {
+    background-color: #DDD;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    width: 45%;
+}
+
+#form-section { width: 55%; }
+
 
 /* Responsive UI using breakpoints */
 
 @media (max-width: 434px) {
     .pop-up {
-        width: 98%;
+        width: 100%;
     }
 }
 
