--- a/MainApp/Customs/home.css
+++ b/MainApp/Customs/home.css
@@ -1,14 +1,14 @@
 /* custom styling for home page */
 body {
-    padding-bottom: 40px;
     position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100%;
 }
 
-body::before {
-    background: url("https://ptvnews.ph/wp-content/uploads/2022/06/PLM1-scaled.jpg") no-repeat fixed center;
+body::after {
+    background: url("https://ptvnews.ph/wp-content/uploads/2022/06/PLM1-scaled.jpg") no-repeat center center fixed;
     background-size: cover;
     content: '';
     z-index: -1;
@@ -32,6 +32,7 @@ body::before {
     width: 85%;
     display: flex;
     flex-flow: row nowrap;
+    border-radius: 30px;
 }
 
 .pop-up {
@@ -39,42 +40,40 @@ body::before {
     position: relative;
 }
 
-.gradient-custom-2 {
-    /* fallback for old browsers */
-    background: #fccb90;
-
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-}
-
 .gradient-form {
     height: 100vh !important;
+    justify-content: center;
     align-items: center;
 }
 
 #info-section {
-    background-color: #DDD;
+    background-color: #222;
+    color: aliceblue;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     justify-content: center;
+    text-align: center;
     width: 45%;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
 }
 
-#form-section { width: 55%; }
+#form-section {
+    width: 55%;
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: inherit;
+}
 
 
 /* Responsive UI using breakpoints */
 
 @media (max-width: 434px) {
-    .pop-up {
+    .gradient-form, .pop-up {
         width: 100%;
     }
 }
 
-@media (max-width: 875.98px) {
+@media (max-width: 750.98px) {
     #info-section {
         display: none;
     }
@@ -86,15 +85,17 @@ body::before {
 }
 
 @media (max-width: 1040px) {
-    #form-section {
-        border-radius: inherit;
-        width: 75%;
-    }
+    .gradient-form, .pop-up { width: 96%;}
 }
 
-@media (max-height: 673px) {
+@media (min-width: 384px) {
+    
+}
+
+@media (max-height: 655px) {
     .gradient-form {
         align-items: flex-start;
         margin-top: 12px;
+        margin-bottom: 12px;
     }
 }
